fixing the scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,11 @@
   }
 
   html {
-    @apply h-full;
     font-size: 95%;
     overflow-x: hidden;
   }
   
   body {
-    @apply h-full;
     background: var(--background);
     color: var(--foreground);
     overflow-x: hidden;
